--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@element-plus/nuxt": "^1.0.9",
+    "@nuxtjs/i18n": "^8.5.3",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "element-plus": "^2.8.3",
     "sass-embedded": "^1.78.0"
+  },
+  "prettier": {
+    "printWidth": 120
   }
 }
